src/test/ui/issues/issue-40000.stderr
error[E0308]: mismatched types
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^ expected concrete lifetime, found bound lifetime parameter
   |
   = note: expected type `std::boxed::Box<(dyn for<'r> std::ops::Fn(&'r i32) + 'static)>`
              found type `std::boxed::Box<dyn std::ops::Fn(_)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
